[tool.poetry]
name = "render-prophet-stocks"
version = "0.1.0"
description = ""
authors = ["Junho <pinedance@gmail.com>"]
readme = "README.md"
packages = [{include = "render_prophet_stocks"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.9.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
